--- a/duo-task-compose/docker-compose.yaml
+++ b/duo-task-compose/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   flask-app:
-    build: ./flask-app
+    build: ./
     ports:
     - target: 5500
       published: 5500
