--- a/Jenkins/jenkins-pipeline-exercise/Jenkinsfile
+++ b/Jenkins/jenkins-pipeline-exercise/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline{
                     sh "curl https://get.docker.com | sudo bash"
                     sh "sudo apt update"
                     sh "sudo apt install -y curl jq"
-                    sh "sudo curl -L 'https://github.com/docker/compose/releases/download/v2.14.0/docker-compose-$(uname -s)-$(uname -m)' -o /usr/local/bin/docker-compose"
+                    sh 'sudo curl -L "https://github.com/docker/compose/releases/download/v2.14.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose'
                     sh "sudo chmod +x /usr/local/bin/docker-compose"
 
 
