--- a/Jenkins/jenkins-pipeline-exercise/Jenkinsfile
+++ b/Jenkins/jenkins-pipeline-exercise/Jenkinsfile
@@ -1,5 +1,8 @@
 pipeline{
         agent any
+        environment {
+            DB_PASSWORD = 'password'
+        }
         stages{
             stage('Clone Directory'){
                 steps{
