--- a/Jenkins/jenkins-pipeline-exercise/Jenkinsfile
+++ b/Jenkins/jenkins-pipeline-exercise/Jenkinsfile
@@ -22,7 +22,7 @@ pipeline{
             }
             stage('Deploy Application'){
                 steps{
-                    sh "sudo docker-compose pull && sudo -E DB_PASSWORD=${DB_PASSWORD} docker-compose up -d."
+                    sh "sudo docker-compose pull && sudo -E DB_PASSWORD=${DB_PASSWORD} docker-compose up -d"
                 }
         }
 }}
