--- a/ansible/playbooks-tutorial/playbook-1.yaml
+++ b/ansible/playbooks-tutorial/playbook-1.yaml
@@ -7,6 +7,7 @@
       name: nginx
       state: present
       update_cache: true
+    register: nginx_info
 
   - name: Copy nginx file over
     copy:
