--- a/ansible/playbooks-tutorial/playbook-1.yaml
+++ b/ansible/playbooks-tutorial/playbook-1.yaml
@@ -18,6 +18,7 @@
       src: nginx.conf
       dest: /etc/nginx/nginx.conf
     register: nginx_config
+    when: nginx_config.changed == false
     
 
   - name: Restart nginx if needed
