--- a/ansible/playbooks-tutorial/playbook-1.yaml
+++ b/ansible/playbooks-tutorial/playbook-1.yaml
@@ -18,7 +18,9 @@
       src: nginx.conf
       dest: /etc/nginx/nginx.conf
     register: nginx_config
-    when: nginx_config.changed == false
+    when: nginx_config.diff.before.path == nginx_config.diff.after.path
+    failed_when: nginx_config.diff.before.path == nginx_config.diff.after.path
+
     
 
   - name: Restart nginx if needed
