--- a/ansible/playbooks-tutorial/uninstall-playbook.yaml
+++ b/ansible/playbooks-tutorial/uninstall-playbook.yaml
@@ -3,6 +3,11 @@
   become: true
   tasks:
 
+  - name: stop nginx
+    service:
+      name: nginx
+      state: stopped
+
   - name: uninstall nginx
     apt:
       name: nginx
