--- a/ansible/playbooks-tutorial/playbook-1.yaml
+++ b/ansible/playbooks-tutorial/playbook-1.yaml
@@ -9,15 +9,14 @@
       state: present
       update_cache: true
     register: installvar
-    failed_when: installvar.cache_update_time > 1
+    #failed_when: installvar.cache_update_time > 1
 
   - name: Copy nginx file over
     copy:
       src: nginx.conf
       dest: /etc/nginx/nginx.conf
     register: nginx_config
-    #when: nginx_config.diff.before.path == nginx_config.diff.after.path
-    #failed_when: nginx_config.diff.before.path == nginx_config.diff.after.path
+ 
 
   - name: Restart nginx if needed
     service:
