--- a/ansible/inventory-tutorial/inventory.yaml
+++ b/ansible/inventory-tutorial/inventory.yaml
@@ -4,6 +4,6 @@ all:
       hosts:
         ec2-3.9.23.175.eu-west-2.compute.amazonaws.com:
         ec2-35.177.110.151.eu-west-2.compute.amazonaws.com:
-      vars:
+      vars: 
         ansible_user: ubuntu
-        ansible_ssh_private_key_file: '~/.ssh/ansible_id_rsa'
+        ansible_private_key: '~/ansible_id'
