--- a/ansible/inventory-tutorial/inventory.yaml
+++ b/ansible/inventory-tutorial/inventory.yaml
@@ -6,4 +6,4 @@ all:
         ip-172-31-40-149.eu-west-2.compute.internal:
       vars: 
         ansible_user: ubuntu
-        ansible_private_key: '~/ansible_id'
+        ansible_ssh_private_key_file: '~/ansible_id'
