--- a/ansible/vars-handlers-tutorial/playbook.yaml
+++ b/ansible/vars-handlers-tutorial/playbook.yaml
@@ -12,9 +12,10 @@
       name: nginx
       state: started
   - name: Add nginx conf
-    copy:
-      src: nginx.conf
+    template:
+      src: "{{ path_to_nginx_conf }}"
       dest: /etc/nginx/nginx.conf
+  handlers:
   - name: Restart nginx
     service: 
       name: nginx
