--- a/ansible/vars-handlers-tutorial/playbook.yaml
+++ b/ansible/vars-handlers-tutorial/playbook.yaml
@@ -18,6 +18,8 @@
     template:
       src: "{{ path_to_nginx_conf }}"
       dest: /etc/nginx/nginx.conf
+    notify: Restart nginx
+    
   handlers:
   - name: Restart nginx
     service: 
