--- a/ansible/vars-handlers-tutorial/playbook.yaml
+++ b/ansible/vars-handlers-tutorial/playbook.yaml
@@ -1,9 +1,8 @@
----
 - hosts: all
   become: true
-  vars:
-    path_to_nginx_conf: "./nginx.conf"
-    nginx_message: "Hello from Ansible on {{ inventory_hostname}}"
+  vars:                                                               # Add
+    path_to_nginx_conf: "./nginx.conf"                                # These
+    nginx_message: "Hello from Ansible on {{ inventory_hostname }}"   # Lines
   tasks:
   - name: Install NGINX
     apt:
@@ -19,7 +18,7 @@
       src: "{{ path_to_nginx_conf }}"
       dest: /etc/nginx/nginx.conf
     notify: Restart nginx
-    
+
   handlers:
   - name: Restart nginx
     service: 
