--- a/ansible/vars-handlers-tutorial/playbook.yaml
+++ b/ansible/vars-handlers-tutorial/playbook.yaml
@@ -1,8 +1,8 @@
 - hosts: all
   become: true
-  vars:                                                               # Add
-    path_to_nginx_conf: "./nginx.conf"                                # These
-    nginx_message: "Hello from Ansible on {{ inventory_hostname }}"   # Lines
+  vars:                                                               
+    path_to_nginx_conf: "./nginx.conf"                               
+    nginx_message: "Hello from ansible on {{ inventory_hostname }}"   
   tasks:
   - name: Install NGINX
     apt:
