--- a/ansible/vars-handlers-exercises/console-message-playbook.yaml
+++ b/ansible/vars-handlers-exercises/console-message-playbook.yaml
@@ -6,4 +6,4 @@
   - name: print message to host
     debug:
       msg: " Ubuntu System "
-      when: host_os == Ubuntu
+      when: "host_os == 'Ubuntu'"
